--- a/scss/estilos.scss
+++ b/scss/estilos.scss
@@ -170,7 +170,7 @@ nav ul{
     color: $blanco;   
     margin-top: 10px;
     margin-bottom: 10px;
-    cursor: crosshair;
+    cursor: $mira;
 }
 
 .boton:hover{
